--- a/index.html
+++ b/index.html
@@ -1,5 +1,68 @@
-<html>
- <h1>Lei's Portfolio</h1>
- <img src="./IMG_8573.JPG" />
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <br>
+    <br>
+    <br>
+    <title>Lei's Portfolio</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous"/>
 
-</html> 
+    <link href="styles.css" rel="stylesheet">
+  </head>
+
+  <body>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+
+    <header data-bs-theme="light">
+        <nav class="navbar navbar-expand-md navbar-light fixed-top bg-light">
+          <div class="container-fluid">
+            <a class="navbar-brand" href="index.html">Home</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarCollapse">
+              <ul class="navbar-nav me-auto mb-2 mb-md-0">
+                <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="projects.html">My Projects</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="https://www.linkedin.com/in/isabelle-ting-312117140/">Contact Me</a>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </nav>
+
+     <main class="container">
+     <section class="photo"> <img src="images/IMG_8573.JPG" width="440px"> </section>
+
+     <section class="card">
+        <div class="card-body">
+         <h3 class="card-title">Lei's Portfolio</h3>
+         <br>
+         <p class="card-text">My name is Isabelle Lei Ting. I’m a student with MIT xPro for Full Stack Software Development. Here I am showcasing some projects we’ve done in these first 10 weeks and all of the skills we’ve learned so far to build this portfolio. I was inspired and motivated by my sister who is a software engineer to step out and challenge something completely new. Linked in the navigation bar is the best way to contact me. I look forward to learning even more and perfecting/polishing this portfolio, while adding more projects as I go on.</p>
+         <br>
+         <a class="btn btn-secondary" href="https://www.linkedin.com/in/isabelle-ting-312117140/" role="button">LinkedIn</a>
+         <a class="btn btn-secondary" href="https://github.com/isabelleting" role="button">Github</a>
+       </div>
+    </section>
+
+     <section class="card-video">
+     <div class="card">
+       <div class="card-body">
+        <h3 class="card-title">Portfolio Video</h3>
+        <br>
+        <p class="card-text"> <iframe width="770" height="400" src="https://www.youtube.com/embed/sUyIjfnZYM4"> </iframe></p>
+       </div>
+    </div>
+    </section>
+</main>
+<br>
+<br>
+<br>
+<br>
+</body>
+</html>
