--- a/projects.html
+++ b/projects.html
@@ -75,8 +75,10 @@
         <div class="carousel-item">
           <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="darkgray"/></svg>
           <div class="container">
-            <div class="carousel-caption">
-              <img src="images/bus.png" width="500px"/>
+            <div class="carousel-caption"> 
+              <video width="450px" controls autoplay loop muted playsinline>
+                <source src="images/busfast.mp4" type="video/mp4">
+              </video>
               <br>
               <br>
               <h2>Real Time Bus Tracker</h2>
@@ -97,7 +99,4 @@
     </div>
 </main>
 </body>
-
- 
-
 </html> 
