--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
             </div>
           </div>
         </nav>
+    </header>
 
    <main class="container">
      <section class="photo"> <img src="images/IMG_8573.JPG" width="440px"> </section>
