--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                   <a class="nav-link active" aria-current="page" href="projects.html">My Projects</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="https://www.linkedin.com/in/isabelle-ting-312117140/">Contact Me</a>
+                  <a class="nav-link active" aria-current="page" href="https://www.linkedin.com">Contact Me</a>
                 </li>
               </ul>
             </div>
@@ -44,7 +44,7 @@
          <br>
          <p class="card-text">My name is Isabelle Lei Ting. I’m a student with MIT xPro for Full Stack Software Development. Here I am showcasing some projects we’ve done in these first 10 weeks and all of the skills we’ve learned so far to build this portfolio. I was inspired and motivated by my sister who is a software engineer to step out and challenge something completely new. Linked in the navigation bar is the best way to contact me. I look forward to learning even more and polishing this portfolio, while adding more projects as I go on.</p>
          <br>
-         <a class="btn btn-secondary" href="https://www.linkedin.com/in/isabelle-ting-312117140/" role="button">LinkedIn</a>
+         <a class="btn btn-secondary" href="https://www.linkedin.com" role="button">LinkedIn</a>
          <a class="btn btn-secondary" href="https://github.com/isabelleting" role="button">Github</a>
        </div>
      </section>
@@ -54,7 +54,7 @@
        <div class="card-body">
         <h3 class="card-title">Portfolio Video</h3>
         <br>
-        <p class="card-text"> <iframe width="770" height="400" src="https://www.youtube.com/embed//MsnyCcSZUIc"> </iframe></p>
+        <p class="card-text"> <iframe width="770" height="400" src="https://www.youtube.com"> </iframe></p>
        </div>
      </div>
      </section>
