--- a/projects.html
+++ b/projects.html
@@ -25,7 +25,7 @@
                 <a class="nav-link active" aria-current="page" href="projects.html">My Projects</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="https://www.linkedin.com/in/isabelle-ting-312117140/">Contact Me</a>
+                <a class="nav-link active" aria-current="page" href="https://www.linkedin.com">Contact Me</a>
               </li>
             </ul>
           </div>
